# binaryen-sys

./: Cargo.toml  LICENSE  README.md  build.rs  install.sh
.devcontainer/: Dockerfile  devcontainer.json
src/: lib.rs
tests/: module.rs
