[package]
name = "binaryen_capi-sys"
version = "116.0.0"
edition = "2021"
authors = ["sakura-aoi"]
license = "Apache-2.0"
description = "Rust Raw Bindings for binaryen"
readme = "README.md"
keywords = ["binaryen", "binding", "wasm", "webassembly"]
categories = ["webassembly", "external-ffi-bindings"]
repository = "https://github.com/ProjectMegu/binaryen-sys"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.69.4"